@@ -1,3 +1,7 @@
+2011-04-11  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/lambda/lambda-this4.C: New.
+
 2011-04-09  Jason Merrill  <jason@redhat.com>
 
 	PR c++/48528
